//
//  AccessibilityIdentifier.swift
//  Rides
//
//  Created by Sameh Farouk on 01/09/2023.
//

import Foundation

struct AccessibilityIdentifier {
    static let vehicleDetailsView = "AccessibilityIdentifierVehicleDetailsView"
    static let searchField = "AccessibilityIdentifierSearchVehicles"
}
