/* 
  Localizable.strings
  Rides

  Created by Sameh Farouk on 31/08/2023.
  
*/

"Vehicles" = "Vehicles";
"Search"= "Search";
"Search results" = "Search results";
"Error" = "Error";
"No internet connection" = "No internet connection";
"Failed loading vehicles" = "Failed loading vehicles";
"Number of vehicles" = "Number of vehicles";
"VIN" = "VIN";
"Make & Model" = "Make & Model";
"Color" = "Color";
"Car Type" = "Car Type";
"Number of vehicle should be at least 1 and mot more than 100" = "Number of vehicle should be at least 1 and mot more than 100";
